src/app/pages/room/room-page.css
main {
  margin: 0 auto;
  padding-top: 30px;
  max-width: 900px;
}

.user-list {
  display: flex;
  justify-content: center;
  gap: 20px;
  flex-wrap: wrap;
}

.user {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  .card {
    height: 50px;
    width: 40px;
    font-size: 20px;
    background: transparent;
  }
}

.card-list {
  display: flex;
  gap: 10px;
  flex-wrap: wrap;
  justify-content: center;

  .card {
    height: 60px;
    width: 50px;
    border: none;
    padding: 0;
    transition: all 0.2s ease-in;
    border-radius: 4px;
    perspective: 1000px;
    background-color: #fff;
    font-size: 28px;
    outline: 1px solid;
    box-shadow: 0px 4px 4px 0px #004152;
    cursor: pointer;

    &.selected {
      transform: scale(1.2) translateY(-15px);
      pointer-events: none;
      box-shadow: 0px 4px 4px 0px #004152;
    }
  }
}

.card {
  height: 60px;
  width: 50px;
  border: none;
  padding: 0;
  transition: all 0.2s ease-in;
  border-radius: 4px;
  perspective: 1000px;
  background-color: #fff;
  font-size: 28px;

  button {
    position: absolute;
    top: -5px;
    right: -5px;
    background-color: #e90e0e;
    width: 16px;
    height: 16px;
    border: none;
    border-radius: 50%;
    color: white;
    outline: 1px solid #af0000;
    line-height: 16px;
    pointer-events: all;
    font-size: 17px;
    padding: 0;
    cursor: pointer;
    box-shadow: 1px -1px 3px 0px #000;
  }
}

.card__inner {
  width: 100%;
  height: 100%;
  position: relative;
  transform-style: preserve-3d;
  transition: transform 0.6s cubic-bezier(0.4, 0.2, 0.2, 1);
  will-change: transform;
  outline: 1px solid #fefefe;
  border-radius: inherit;
  cursor: pointer;
  box-shadow: 0 0 4px 0px #000;
}

.card__front,
.card__back {
  position: absolute;
  inset: 0;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  border-radius: inherit;
  background-color: #fff;
}

.card__front {
  background-color: #d6c7b2;
}

.card__back {
  transform: rotateY(180deg);
  outline: 1px solid;
}

.card.flipped {
  .card__inner {
    transform: rotateY(180deg);
  }
}

.card.disabled,
.card.selected .card__inner {
  pointer-events: none;
}

.result-list {
  display: flex;
  gap: 10px;
  justify-content: center;

  .result {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 5px;

    .result-label {
      font-size: 26px;
      line-height: 27px;
    }

    .small-card {
      width: 35px;
      height: 45px;
      display: inline-flex;
      outline: 1px solid;
      align-items: center;
      justify-content: center;
      border-radius: 4px;
      font-size: 18px;
      background-color: #fff;
    }
  }
}

section {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 40px;
  margin-bottom: 50px;

  .section-title {
    border-bottom: 1px solid #0000007d;
    width: 50%;
    text-align: center;
    padding-bottom: 20px;
  }
}

.join-room {
  display: flex;
  justify-content: center;
  padding: 5px;
  flex-direction: column;
  align-items: center;

  input,
  button {
    font-size: 24px;
    padding: 5px;
  }

  span {
    color: rgb(200, 0, 0);
  }
}

.btn {
  padding: 10px;
}

.input-btn {
  display: flex;
  padding: 5px;
}

.spinner-container {
  display: flex;
  justify-content: center;
  height: 600px;
  align-items: center;
}

.participants {
  .title {
    display: inline-flex;
    align-items: center;
    gap: 5px;

    button {
      color: #e90e0e;
    }
  }
}

@media (max-width: 425px) {
  .join-room {
    flex-direction: column;
  }
  .input-btn {
    flex-direction: column;
  }
}

